--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Occupied
-subtitle: Official Website of HM Original App Occupied 
+subtitle: Official Website for HM Original App Occupied 
 ---
